# photo-import

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-04-04-photo-importr.md  2026-04-07-burst-navigation.md  2026-04-07-two-pass-thumbnails.md
docs/superpowers/specs/: 2026-04-04-photo-importr-design.md  2026-04-07-burst-navigation-design.md  2026-04-07-two-pass-thumbnails-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpx_support.rs  import.rs  lib.rs  main.rs  photos.rs  volumes.rs
src/__tests__/: Grid.test.tsx  ImportDialog.test.tsx  Preview.test.tsx  usePhotos.test.ts  useSelection.test.ts
src/components/: ActionBar.tsx  ExposureHistogram.tsx  FullMap.tsx  GpxBar.tsx  Grid.tsx  ImportDialog.tsx  ImportReview.tsx  MiniMap.tsx  Preview.tsx  Thumbnail.tsx  TimelineStrip.tsx  Toolbar.tsx  TopBar.tsx
src/hooks/: usePhotos.ts  useSDCard.ts  useSelection.ts
src/lib/: commands.ts  detectGroups.ts  thumbnailQueue.ts
website/app/: layout.tsx  page.tsx
website/app/changelog/: page.tsx
website/app/components/: ScreenshotCarousel.tsx
website/content/: changelog.ts
